1error
[  4%] Built target g3dlib
[  4%] Built target Detour
[  5%] Built target Recast
[  5%] Built target fmt
[  8%] Built target jemalloc
[  8%] Built target gsoap
[  9%] Built target argon2
[ 10%] Built target mpq
--
    Could not find a proper repository signature (hash) - you may need to pull tags with git fetch -t
    Continuing anyway - note that the versionstring will be set to "unknown 1970-01-01 00:00:00 (Archived)"
[ 10%] Built target revision_data.h
Scanning dependencies of target common
[ 10%] Building CXX object src/common/CMakeFiles/common.dir/Encoding/Base32.cpp.o
In file included from /root/TrinityCore/src/common/Encoding/Base32.cpp:19:
/root/TrinityCore/src/common/Encoding/BaseEncoding.h:35:51: error: no member
      named 'lcm' in namespace 'advstd'
    static constexpr std::size_t PAD_TO = advstd::lcm(8u, BITS_PER_CHAR);
                                          ~~~~~~~~^
1 error generated.
src/common/CMakeFiles/common.dir/build.make:727: recipe for target 'src/common/CMakeFiles/common.dir/Encoding/Base32.cpp.o' failed
make[2]: *** [src/common/CMakeFiles/common.dir/Encoding/Base32.cpp.o] Error 1
CMakeFiles/Makefile2:956: recipe for target 'src/common/CMakeFiles/common.dir/all' failed
make[1]: *** [src/common/CMakeFiles/common.dir/all] Error 2
Makefile:127: recipe for target 'all' failed
make: *** [all] Error 2
